--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Judul Halaman</title>
+<title>frans</title>
 </head>
 <body>
 <header>
-<h1>Ini Header</h1>
+<h1>INI HEADER</h1>
 <nav>
 <ul>
 <li><a href="#home">Beranda</a></li>
@@ -22,12 +22,13 @@
 <p>Ini contoh paragraf HTML.</p>
 </section>
 <section id="about">
-<h2>Tentang Kami</h2>
-<p>HTML digunakan untuk membuat struktur halaman web.</p>
-</section>
-</main>
-<footer>
-<p>&copy; 2025 - 2511500017</p>
+<h2>about frans</h2>
+<p>HAI perkenalkan nama saya, frans wijaya&#128516; saya mahasiswa atma luhur pangkal pinang NIM saya 2511500017 lahir di desa limbung kecematan jebus, kabupaten bangka barat.tempat, tanggal lahir saya:limbung,22-06-2007 hobby saya mancing dan bermain bola.sebelum masuk kuliah saya daftar polisi tapi saya gugur di pantukhir, setelah gugur baru saya memilih untuk kuliah dulu sambil menunggu tahun depan untuk daftar polisi lagi.nama AYAH saya HAMDAN ,nama IBU saya PARYANI,nama KAKAK saya RANGGA SAPUTRA, dan ADIK saya RENATA LUTFIANTY.sekian dari saya SALAM BUDI LUHUR  SEKIAN TERIMAH KASIH. 
+     </p>
+</section id="contact">
+<h2>KONTAK KAMI</h2>
+<p>contoh form</p>
+<p>&copy; 2025 - frans wijaya NIM 2511500017</p>
 </footer>
 </body>
 </html>
